--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "serve": "node serve.js"
   },
   "private": true,
   "dependencies": {
@@ -22,6 +23,7 @@
     "@ngrx/store": "^12.4.0",
     "@ngrx/store-devtools": "^12.4.0",
     "bootstrap": "^5.1.0",
+    "express": "^4.17.1",
     "rxjs": "^6.6.7",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
