--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/haniehmhf/nestjs-websocket-sample/issues"
   },
-  "homepage": "https://github.com/haniehmhf/nestjs-websocket-sample#readme"
+  "homepage": "https://github.com/haniehmhf/nestjs-websocket-sample#readme",
+  "engines": {
+    "node": "12.18.2",
+    "npm": "6.14.5"
+  }
 }
