--- a/client/package.json
+++ b/client/package.json
@@ -29,9 +29,7 @@
     "express": "^4.17.1",
     "rxjs": "^6.6.7",
     "tslib": "^2.2.0",
-    "zone.js": "~0.11.4"
-  },
-  "devDependencies": {
+    "zone.js": "~0.11.4",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
