--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "~12.1.4",
-    "@angular/compiler-cli": "~12.1.0",
-    "@angular-devkit/build-angular": "~12.1.4",
     "@angular/animations": "~12.1.0",
     "@angular/common": "~12.1.0",
     "@angular/compiler": "~12.1.0",
@@ -29,7 +26,12 @@
     "express": "^4.17.1",
     "rxjs": "^6.6.7",
     "tslib": "^2.2.0",
-    "zone.js": "~0.11.4",
+    "zone.js": "~0.11.4"
+  },
+  "devDpendencies": {
+    "@angular/cli": "~12.1.4",
+    "@angular/compiler-cli": "~12.1.0",
+    "@angular-devkit/build-angular": "~12.1.4",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
