--- a/client/package.json
+++ b/client/package.json
@@ -26,9 +26,7 @@
     "express": "^4.17.1",
     "rxjs": "^6.6.7",
     "tslib": "^2.2.0",
-    "zone.js": "~0.11.4"
-  },
-  "devDpendencies": {
+    "zone.js": "~0.11.4",
     "@angular/cli": "~12.1.4",
     "@angular/compiler-cli": "~12.1.0",
     "@angular-devkit/build-angular": "~12.1.4",
